Bug 81549 - PIVOTTABLE: Crash pivot table
Summary: PIVOTTABLE: Crash pivot table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: All All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.4.0 target:4.3.1
Keywords: haveBacktrace, regression
: 81591 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-07-19 19:44 UTC by Julien Nabet
Modified: 2014-07-21 10:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
bt console from master sources (12.49 KB, text/plain)
2014-07-19 19:44 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2014-07-19 19:44:23 UTC
Created attachment 103124 [details]
bt console from master sources

Problem description: 
After having created a brand new Calc file and just put some data, I tried to use datapilot and had a crash.


Steps to reproduce:
1. Open Calc
2. Create a brand new file
3. put some data
4. Menu Data/Pivot Table/Create (new window appears with "Current Selection" by default)
5. Click Ok button

Current behavior:
Crash
Expected behavior:
No Crash
              
Operating System: Debian
Version: 4.4.0.0.alpha0+ Master
Comment 1 Julien Nabet 2014-07-19 20:33:14 UTC
put it at NEW since there's a bt.

Kohei: noticing http://cgit.freedesktop.org/libreoffice/core/commit/?id=345d6dd9d938a88722fb6d1f1963047a9761412d, any idea?
Comment 2 Julien Nabet 2014-07-19 20:58:10 UTC
Proposition of a patch (at least it doesn't crash): https://gerrit.libreoffice.org/#/c/10410/
Comment 3 Commit Notification 2014-07-20 02:35:20 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a82ff18269e5b37348d402b7c21c3f200068265c

Resolves fdo#81549: Crash pivot table



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-07-20 02:45:33 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=917ff913b11309dfb13f5ee0d46a609608e5bbe3&h=libreoffice-4-3

Resolves fdo#81549: Crash pivot table


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2014-07-20 04:14:17 UTC
Thank you Kohei for the review and the backport! :-)

(might be considered as useless but just to complete the information, I'm adding "regression" + increase importance)
Comment 6 Julien Nabet 2014-07-21 09:10:25 UTC
*** Bug 81591 has been marked as a duplicate of this bug. ***
Comment 7 Kevin Suo 2014-07-21 10:39:43 UTC
I confirm that Bug 81591 is really a duplicate of this one.

Could not reproduce anymore with:
Version: 4.4.0.0.alpha0+
TinderBox: Win-x86@42, Branch:master, Time: 2014-07-21_06:04:54
Windows XP SP3.